Fixes white space and syntax

--- a/src/stylesheets/product-item.scss
+++ b/src/stylesheets/product-item.scss
@@ -1,4 +1,4 @@
-@import './variables';
+@import "./variables";
 
 .product-item {
   display: flex;
@@ -11,8 +11,7 @@
   margin-right: 16px;
   margin-bottom: 24px;
 
-
-  >.cart {
+  > .cart {
     position: relative;
     z-index: 1;
     background-color: $primary;
@@ -21,7 +20,7 @@
     visibility: hidden;
   }
 
-  >.cart:before {
+  > .cart:before {
     visibility: visible;
     text-decoration: none;
     display: flex;
@@ -43,11 +42,11 @@
     border-radius: 4px;
   }
 
-  >.cart:hover {
+  > .cart:hover {
     opacity: 80%;
   }
 
-  >.product {
+  > .product {
     background-color: $bg2;
     color: $text;
     margin-bottom: 8px;
@@ -56,7 +55,7 @@
     text-decoration: none;
   }
 
-  >.product>.details {
+  > .product > .details {
     padding: 16px;
     color: $text;
     display: flex;
@@ -64,19 +63,19 @@
     justify-content: center;
   }
 
-  >.product>.details>.category {
+  > .product > .details > .category {
     color: $primary;
     text-transform: uppercase;
     font-size: $overline;
     letter-spacing: 1.3px;
   }
 
-  >.product>.details>.name {
+  > .product > .details > .name {
     font-size: $body;
     margin-bottom: 8px;
   }
 
-  >.product>.details>.price {
+  > .product > .details > .price {
     font-size: $body;
   }
 
@@ -86,7 +85,7 @@
     margin-right: 40px;
     max-width: 100%;
 
-    >.cart {
+    > .cart {
       display: flex;
       visibility: visible;
       justify-content: center;
@@ -102,16 +101,16 @@
       text-decoration: none;
     }
 
-    >.cart:before {
+    > .cart:before {
       display: none;
       visibility: hidden;
     }
 
-    >.product {
+    > .product {
       width: 280px;
     }
 
-    >.product>.details>.price,
+    > .product > .details > .price,
     .name {
       font-size: $h6;
     }
@@ -123,13 +122,13 @@
   transition: all ease-in-out 0.2s;
   margin-top: -8px;
 
-  >.cart,
+  > .cart,
   .cart:before {
     transition: all ease-in-out 0.2s;
     box-shadow: $glow;
   }
 
-  >.product {
+  > .product {
     transition: all ease-in-out 0.2s;
     box-shadow: $glow;
     background-color: $bg1;
@@ -165,38 +164,36 @@ img.product-image {
 }
 
 .product-item.-light {
-
-  >.cart {
+  > .cart {
     background-color: $primary-l;
   }
 
-  >.cart:before {
+  > .cart:before {
     background-color: $primary-l;
   }
 
-  >.product {
+  > .product {
     background-color: $bg2-l;
     color: $text-l;
   }
 
-  >.product>.details {
+  > .product > .details {
     color: $text-l;
   }
 
-  >.product>.details>.category {
+  > .product > .details > .category {
     color: $primary-l;
   }
 }
 
 .product-item.-light:hover,
 .product-item.-light:focus {
-
-  >.cart,
+  > .cart,
   .cart:before {
     box-shadow: $shadow;
   }
 
-  >.product {
+  > .product {
     box-shadow: $shadow;
     background-color: $bg1-l;
   }
